cf-maker - add styles for footer, add bgs

--- a/cf-maker/src/scss/components/page-header.scss
+++ b/cf-maker/src/scss/components/page-header.scss
@@ -1,9 +1,9 @@
 .page-header {
     position: fixed;
     width: 100%;
-    background-color: black;
     z-index: 10;
     border-bottom: 1px solid $gray-line;
+//    background-color: black;
     
     &__inner {
         display: flex;
