--- a/cf-maker/src/scss/components/welcome-screen.scss
+++ b/cf-maker/src/scss/components/welcome-screen.scss
@@ -1,7 +1,7 @@
 .welcome-screen {
     padding-top: 75px;
     padding-bottom: 10px;
-    background-color: grey;
+//    background-color: grey;
     
     width: 100%;
     text-align: center;
