cg-maker - add slider for gallery and partners, check resolutions till 425px (mobile-large

--- a/cf-maker/src/scss/components/plan-tabs.scss
+++ b/cf-maker/src/scss/components/plan-tabs.scss
@@ -114,6 +114,12 @@
     }
 }
 
+@media(min-width: 425px) {
+    .plan-tabs__content-price {
+        margin-bottom: 50px;
+    }
+}
+
 @media(min-width: 960px) {
     .plan-tabs {
         width: 50%;
