--- a/cf-maker/src/scss/style.scss
+++ b/cf-maker/src/scss/style.scss
@@ -42,3 +42,10 @@ body {
 @import "components/footer-nav.scss";
 
 @import "components/page-footer.scss";
+
+
+@import "../../lib/slider-css.scss";
+
+@import "components/gallery.scss";
+
+@import "components/partners.scss";
