--- a/cf-maker/src/scss/components/page-footer.scss
+++ b/cf-maker/src/scss/components/page-footer.scss
@@ -2,6 +2,17 @@
     background-image: url(../../img/footer-bg.jpg);
     background-size: cover;
     
+    &:before {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 70px;
+        background-image: url(../../img/line--bg-upper.png);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
     &__copyright {
         display: flex;
         flex-direction: column;
