--- a/cf-maker/src/scss/style.scss
+++ b/cf-maker/src/scss/style.scss
@@ -7,13 +7,46 @@ body {
     font-size: 18px;
     line-height: 22px;
     background-image: url(../../img/programs-bg.jpg);
+    background-size: contain;
 }
 
 .first-screen-wrapper {
+    width: 100%;
     background-image: url(../../img/header-bg.jpg);
     background-size: cover;
     background-position: center;
+    position: relative;
+    
+    &:after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 70px;
+        background-image: url(../../img/line--bg-lower.png);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 }
+
+
+//    why this didnt work? 
+//    &:after {
+//        background-image: url(../../img/line--bg-lower.png);
+//        background-position: center;
+//        content: '';
+//        display: block;
+//        width: 100%;
+//        height: 24px;
+//    background-size: contain;
+//    background-repeat: no-repeat;
+//    }
+//?(1388)
+//@media(min-width: 960px) {
+//    .first-screen-wrapper:after {
+//            height: 100px;
+//    }
+//}
 
 @import "components/page-header.scss";
 
