cf-maker add table to programs, style partners-arrow, style 768px(half-page)

--- a/cf-maker/src/scss/components/page-header.scss
+++ b/cf-maker/src/scss/components/page-header.scss
@@ -78,8 +78,13 @@
     .page-header {
         &__logotype {
             width: 150px;
-            top: 20px;
-            left: 20px;        
+            top: -4px;
+            left: 20px;
+            
+            &_scrolled {
+                width: 80px;
+                top: 5px;
+            }
         }
     }
 }
