--- a/cf-maker/src/scss/var.scss
+++ b/cf-maker/src/scss/var.scss
@@ -6,6 +6,8 @@ $textcolor-with-bg: white;
 $textcolor-without-bg: black;
 $gray: #adadad;
 $gray-line: darken(#adadad, 20%);
+$green: #6d9e06;
+$red: #c20000;
 //fonts
 
 // don't understand where is this font
