--- a/cf-maker/src/scss/components/gallery.scss
+++ b/cf-maker/src/scss/components/gallery.scss
@@ -1,10 +1,11 @@
 .gallery {
 //    background-color: saddlebrown;
+//    padding-top: 50px;
     background-image: url(../../img/gallery-bg.jpg);
     background-size: cover;
     color: $textcolor-with-bg;
     text-align: center;
-//    padding-top: 50px;
+    clear: both;
     
     &:before,
     &:after {
