--- a/cf-maker/src/scss/components/study-plan.scss
+++ b/cf-maker/src/scss/components/study-plan.scss
@@ -45,3 +45,33 @@
 .js-study-plan__hidden {
     display: none;
 }
+
+@media(min-width: 768px) {
+    .study-plan {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 3%;
+        padding-right: 3%;
+        
+        &__list {
+            padding: 0;
+            margin-top: 60px; 
+        }
+        
+        &__item {
+            width: 30%;
+            
+            &:nth-last-of-type(1) {
+                ul.study-plan__list {
+                    margin-top: 35px;
+                }
+            }
+            
+            &:nth-of-type(2) {
+                ul.study-plan__list {
+                    margin-top: 82px;
+                }
+            }
+        }
+    }
+}
