--- a/cf-maker/src/scss/components/gallery.scss
+++ b/cf-maker/src/scss/components/gallery.scss
@@ -117,3 +117,28 @@
         }
     }
 }
+
+@media(min-width: 768px) {
+    .gallery {
+        &__inner {
+            width: 95%;
+            margin-left: auto;
+            margin-right: auto; 
+        }
+        
+        &__sub-header {
+            padding-left: 10%;
+            padding-right: 10%;
+        }
+        
+        &__slider-wrapper {
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+            
+            .slides {
+                max-height: 500px;
+            }
+        }
+    }
+}
