--- a/cf-maker/src/scss/components/page-footer.scss
+++ b/cf-maker/src/scss/components/page-footer.scss
@@ -37,3 +37,33 @@
         font-family: $font-heading;
     }
 }
+
+@media(min-width: 768px) {
+    .page-footer {
+        &__copyright {
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            padding-left: 5%;
+            padding-right: 5%;
+            margin-top: 30px;
+            
+            p {
+                margin-bottom: 0px;
+                
+                &.rights {
+                    margin-top: 0px;
+                    
+                    &:after {
+                        content: '';
+                        display: inline-block;
+                        width: 2px;
+                        height: 25px;
+                        background-color: white;
+                        margin-left: 30px;
+                    }
+                }
+            }
+        }
+    }
+}
