--- a/cf-maker/src/scss/components/school-description.scss
+++ b/cf-maker/src/scss/components/school-description.scss
@@ -23,3 +23,15 @@
         text-align: justify;
     }
 }
+
+@media(min-width: 1024px) {
+    .school-description {
+        &__text-wrapper {
+            flex-direction: row;
+            
+            p:first-child {
+                margin-right: 45px;
+            }
+        }
+    }
+}
