--- a/cf-maker/src/scss/components/page-header.scss
+++ b/cf-maker/src/scss/components/page-header.scss
@@ -74,7 +74,7 @@
     }
 }
 
-@media screen and (min-width: 480px) {
+@media(min-width: 480px) {
     .page-header {
         &__logotype {
             width: 150px;
@@ -85,6 +85,22 @@
                 width: 80px;
                 top: 5px;
             }
+        }
+    }
+}
+
+@media(min-width: 1024px) {
+    .page-header {
+        &__inner {
+            padding-top: 0px;
+        }
+        
+        &__nav-toggler {
+            display: none;
+        }
+        
+        &__phone-number {
+            padding-top: 20px;
         }
     }
 }
