--- a/cf-maker/src/scss/components/study-plan.scss
+++ b/cf-maker/src/scss/components/study-plan.scss
@@ -75,3 +75,19 @@
         }
     }
 }
+
+@media(min-width: 1024px) {
+    .study-plan {
+        &__hidden {
+            display: block;
+        }
+        
+        &__more {
+            display: none;
+        }
+        
+        &__list-item {
+            line-height: 34px;
+        }
+    }
+}
