--- a/cf-maker/src/scss/components/testimonals.scss
+++ b/cf-maker/src/scss/components/testimonals.scss
@@ -23,3 +23,16 @@
         max-width: 30%;
     }
 }
+
+@media(min-width: 1366px) {
+    .textimonals {
+        &__item {
+            padding-left: 20%;
+            padding-right: 20%;
+        }
+        
+        &__photo {
+            max-width: 10%;
+        }
+    }
+}
