cf maker 1024 and 1440 part 3

--- a/cf-maker/src/scss/components/testimonals.scss
+++ b/cf-maker/src/scss/components/testimonals.scss
@@ -25,7 +25,7 @@
 }
 
 @media(min-width: 1366px) {
-    .textimonals {
+    .testimonals {
         &__item {
             padding-left: 20%;
             padding-right: 20%;
