cf maker - send with bugs

--- a/cf-maker/src/scss/components/testimonals.scss
+++ b/cf-maker/src/scss/components/testimonals.scss
@@ -1,5 +1,7 @@
 .testimonals {
     text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
     
     &__item {
         padding-left: 3%;
