--- a/cf-maker/src/scss/components/ask-question.scss
+++ b/cf-maker/src/scss/components/ask-question.scss
@@ -51,10 +51,19 @@
                 content: "→";
                 display: block;
                 font-size: 50px;
-                color: black;
+                color: $textcolor-without-bg;
                 position: absolute;
                 top: -18px;
                 left: 90px
+            }
+            
+            &:hover {
+                color: $textcolor-with-bg;
+                background-color: $textcolor-without-bg;
+                
+                &:after {
+                    color: $textcolor-with-bg;
+                }
             }
         }
     }
