--- a/cf-maker/src/scss/components/gallery.scss
+++ b/cf-maker/src/scss/components/gallery.scss
@@ -78,6 +78,11 @@
             font-size: 0px;
             position: relative;
         
+        &:hover,
+        &:focus {
+            background-color: lighten($additional-color, 20%);
+        }
+        
         &:nth-of-type(1) {
             &:before {
                 content: "←";
