--- a/cf-maker/src/scss/components/page-footer.scss
+++ b/cf-maker/src/scss/components/page-footer.scss
@@ -43,7 +43,7 @@
         &__copyright {
             flex-direction: row;
             justify-content: space-around;
-            align-items: center;
+            align-items: baseline;
             padding-left: 5%;
             padding-right: 5%;
             margin-top: 30px;
@@ -63,6 +63,19 @@
                         margin-left: 30px;
                     }
                 }
+            }
+        }
+    }
+}
+
+@media(min-width: 1024px) {
+    .page-footer {
+        &__copyright {
+            justify-content: center;
+            
+            p {
+                margin-left: 10px;
+                margin-right: 10px; 
             }
         }
     }
