--- a/cf-maker/src/scss/components/programs.scss
+++ b/cf-maker/src/scss/components/programs.scss
@@ -2,6 +2,9 @@
     width: 100%;
     padding-top: 50px;
     text-align: center;
+    background-image: url(../../img/programs-bg.jpg);
+    background-size: contain;
+
     
     &__header {
         font-family: $font-heading;
