--- a/sedona/src/scss/components/page-header.scss
+++ b/sedona/src/scss/components/page-header.scss
@@ -5,16 +5,22 @@
     background-color: white;
     border-bottom: 1px solid $main-color;
     z-index: 10;
+    top: 0;
+    transition: top 1.4s;
     
     &__inner {
      @include inner-container;
         width: auto;
+        min-height: 62px;
     }
     
     &__logo-wrapper {
         width: 140px;
-        margin-left: auto;
-        margin-right: auto;
+        position: absolute;
+        left: 50%;
+        margin-left: -70px;
+//        margin-left: auto;
+//        margin-right: auto;
         
         img {
             max-width: 100%;
@@ -25,4 +31,8 @@
     &__nav-wrapper {
         position: relative;
     }
+}
+
+.page-header_nav-open {
+    top: 230px;
 }
