--- a/sedona/src/scss/components/tourism-features.scss
+++ b/sedona/src/scss/components/tourism-features.scss
@@ -1,6 +1,7 @@
 .tourism-features {
     width: 100%;
     padding-top: 30px;
+    padding-bottom: 30px;
     text-align: center;
     text-transform: uppercase;
     background-color: $gray;
@@ -28,7 +29,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media(min-width: 768px) {
     .tourism-features {
         &__inner {
             width: 100%;
