--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -16,6 +16,7 @@ $main-color: #81b3d2;
 $gray: #eeeeee;
 $brown: #766357;
 $gorgeous-brown: #83746a;
+$gray-bg: #f2f2f2;
 
 //mixins
 @mixin inner-container {
