--- a/sedona/src/scss/components/tourism-essentials.scss
+++ b/sedona/src/scss/components/tourism-essentials.scss
@@ -83,3 +83,11 @@
         }
     }
 }
+
+@media(min-width: 1280px) {
+    .tourism-essentials {
+        padding-bottom: 60px;
+        background-color: white;
+        margin-bottom: 0px;
+    }
+}
