--- a/sedona/src/scss/components/bridge-content.scss
+++ b/sedona/src/scss/components/bridge-content.scss
@@ -32,7 +32,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media(min-width: 768px) {
     .bridge-content {
         display: flex;
         padding-top: 0;
@@ -45,6 +45,7 @@
         &__landscape {
             width: 67%;
             order: 1;
+            min-height: 350px;
         }
         
         &__descr {
@@ -56,6 +57,25 @@
         &__header {
             font-size: 16px;
             line-height: 24px;
+        }
+    }
+}
+
+@media(min-width: 1280px) {
+    .bridge-content {
+        &__header {
+            font-size: 1.2em;
+            line-height: 1.5em;
+        }
+        
+        &__descr {
+            padding-top: 70px;
+            font-size: 18px;
+            line-height: 22px;
+        }
+        
+        &__landscape {
+            min-height: 400px;
         }
     }
 }
