--- a/sedona/src/scss/components/hotel-search.scss
+++ b/sedona/src/scss/components/hotel-search.scss
@@ -24,7 +24,7 @@
     }
 }
 
-@media screen and (min-width: 768px) {
+@media(min-width: 768px) {
     .hotel-search {
         &__header {
             h2 {
@@ -46,5 +46,12 @@
             padding-top: 550px;
             background-size: cover;
         }
+    }
+}
+
+@media(min-width: 1280px) {
+    .hotel-search {
+        @include desktop-container;
+        background-color: white;
     }
 }
