--- a/sedona/src/scss/components/page-header.scss
+++ b/sedona/src/scss/components/page-header.scss
@@ -6,7 +6,7 @@
     border-bottom: 1px solid $main-color;
     z-index: 10;
     top: 0;
-    transition: top 1.4s;
+    transition: top 0.6s;
     
     &__inner {
      @include inner-container;
@@ -35,4 +35,12 @@
 
 .page-header_nav-open {
     top: 230px;
+}
+
+@media(min-width: 1280px) {
+    .page-header {
+        width: 88%;
+        margin-left: 6%;
+        margin-right: 6%;
+    }
 }
