--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -25,6 +25,14 @@ $gray-bg: #f2f2f2;
     margin-right: auto;
 }
 
+@mixin desktop-container {
+    width: 88%;
+    margin-left: auto;
+    margin-right: auto;
+//    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
+    box-shadow:  0 0 10px rgba(0,0,0,0.75);
+}
+
 body {
     font-family: $font;
     font-size: $font-size;
@@ -32,9 +40,6 @@ body {
     margin: 0;
 }
 
-//here will be imports for different blocks
-
-//header-block
 @import "components/page-header.scss";
 
 @import "components/main-nav.scss";
@@ -77,3 +82,23 @@ body {
 @import "components/search-form.scss";
 
 @import "components/page-footer.scss";
+
+@media(min-width: 1280px) {
+    body {
+        width: 100%;
+        position: relative;
+        background-color: lightgray;
+    }
+    
+    .greetings-text {
+        @include desktop-container;
+        background-color: white;
+        padding-bottom: 50px;
+        padding-top: 50px;
+        margin-bottom: 0px;
+    }
+    
+    .page-content {
+        @include desktop-container;
+    }
+}
