--- a/port/src/scss/style.scss
+++ b/port/src/scss/style.scss
@@ -15,3 +15,14 @@ body {
 @import 'components/page-header.scss';
 
 @import 'components/welcome-screen.scss';
+
+@import 'components/main-nav.scss';
+
+@import 'components/nakitel.scss';
+
+@import 'components/pingbuller.scss';
+
+@import 'components/contacts.scss';
+
+
+@import 'components/page-footer.scss';
