--- a/port/src/scss/components/nakitel.scss
+++ b/port/src/scss/components/nakitel.scss
@@ -1,13 +1,15 @@
-.welcome-screen {
+.nakitel {
     margin-bottom: 50px;
     
     &__inner {
         @include margin-sides;
-//        border: 2px solid red;
-        padding-left: 10px;
+        border: 2px solid red;
+        text-align: right;
+        padding-right: 10px;
         padding-bottom: 20px;
         color: $white;
-        background-image: url(../../img/welcome-screen__bg.jpg);
+        background-color: #60b8a3;
+//        background-image: url(../../img/welcome-screen__bg.jpg);
         background-size: cover;
     }
     
@@ -17,7 +19,7 @@
         padding-top: 60px;
     }
     
-    &__bio {
+    &__text {
         margin-bottom: 50px;
     }
     
