--- a/port/src/scss/components/page-header.scss
+++ b/port/src/scss/components/page-header.scss
@@ -2,12 +2,29 @@
     &__inner {
         padding-top: 5%;
         padding-bottom: 5%;
-//        margin-left: 7%;
-//        margin-right: 7%;
         @include margin-sides;
         display: flex;
         justify-content: space-between;
-        border: 2px solid red;
+        position: relative;
+    }
+    
+    &__logo {
+        display: block;
+        color: $gray;
+        font-size: 1em;
+        font-family: $font-main;
+        text-decoration: none;
+        
+        img {
+            max-width: 20%;
+            height: auto;
+        }
+        
+        span {
+            margin-top: 18px;
+            vertical-align: top;
+            display: inline-block;
+        }
     }
 }
 
