port - change buttons for anchors, fix text, add versions till 768px

--- a/port/src/scss/components/page-header.scss
+++ b/port/src/scss/components/page-header.scss
@@ -14,9 +14,10 @@
         font-size: 1em;
         font-family: $font-main;
         text-decoration: none;
+        max-width: 170px;
         
         img {
-            max-width: 20%;
+            max-width: 30%;
             height: auto;
         }
         
