--- a/port/src/scss/components/welcome-screen.scss
+++ b/port/src/scss/components/welcome-screen.scss
@@ -38,3 +38,11 @@
 }
 
 //padding-left: 60px
+
+@media(min-width: 768px) {
+    .welcome-screen {
+        &__inner {
+            padding-left: 20px;
+        }
+    }
+}
