--- a/port/src/scss/components/contacts.scss
+++ b/port/src/scss/components/contacts.scss
@@ -12,6 +12,11 @@
             min-height: 40px;
         }
     }
+    
+    &__icon_telegramm {
+
+    }
 }
 
 //color of git-icon rgb(24, 22, 22);
+//color of telegramm-icon #139BD0
