--- a/port/src/scss/components/nakitel.scss
+++ b/port/src/scss/components/nakitel.scss
@@ -3,13 +3,11 @@
     
     &__inner {
         @include margin-sides;
-        border: 2px solid red;
         text-align: right;
         padding-right: 10px;
         padding-bottom: 20px;
         color: $white;
         background-color: #60b8a3;
-//        background-image: url(../../img/welcome-screen__bg.jpg);
         background-size: cover;
     }
     
@@ -24,12 +22,14 @@
     }
     
     &__button {
+        display: inline-block;
+        padding: 10px;
+        margin-bottom: 50px;
         border: 2px solid $peach;
         background-color: transparent;
         color: $white;
         font-size: 1em;
-        padding: 10px;
-        margin-bottom: 50px;
+        text-decoration: none;
         
         &:hover,
         &:focus {
@@ -40,3 +40,16 @@
 }
 
 //padding-left: 60px
+
+@media(min-width: 768px) {
+    .nakitel {
+        flex-grow: 1;
+        
+        &__inner {
+            max-width: 303px;
+            padding-right: 30px;
+            margin-left: 0px;
+            margin-right: 0px;
+        }
+    }
+}
