port - add some contetn-images, real content-text to blocks, fix some bugs with 768px-resolution

--- a/port/src/scss/components/main-nav.scss
+++ b/port/src/scss/components/main-nav.scss
@@ -41,8 +41,8 @@
     }
 }
 
-@media(min-width: 768px) {
-    .main-nav__toggler {
-        top: 54px;
-    }
-}
+//@media(min-width: 768px) {
+//    .main-nav__toggler {
+//        top: 54px;
+//    }
+//}
