--- a/port/src/scss/components/nakitel.scss
+++ b/port/src/scss/components/nakitel.scss
@@ -1,24 +1,40 @@
 .nakitel {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     
     &__inner {
         @include margin-sides;
         text-align: right;
         padding-right: 10px;
-        padding-bottom: 20px;
+        padding-bottom: 50px;
         color: $white;
         background-color: #60b8a3;
         background-size: cover;
+        position: relative;
+        overflow: hidden;
+        @include container-shadow;
+
+    }
+    
+    &__content-img {
+        max-width: 185px;
+        position: absolute;
+        top: 130px;
+        left: 3px;
+        z-index: 0;
     }
     
     &__header {
         margin-top: 0px;
-        margin-bottom: 40px;
-        padding-top: 60px;
+        margin-bottom: 20px;
+        padding-top: 30px;
+        font-size: 1.8em;
     }
     
     &__text {
         margin-bottom: 50px;
+        z-index: 1;
+        position: relative;
+        font-size: 1.2em;
     }
     
     &__button {
@@ -41,15 +57,16 @@
 
 //padding-left: 60px
 
+
 @media(min-width: 768px) {
     .nakitel {
         flex-grow: 1;
         
         &__inner {
-            max-width: 303px;
             padding-right: 30px;
             margin-left: 0px;
             margin-right: 0px;
+            max-width: 303px;
         }
     }
 }
