--- a/port/src/scss/components/pingbuller.scss
+++ b/port/src/scss/components/pingbuller.scss
@@ -5,20 +5,35 @@
         @include margin-sides;
         text-align: left;
         padding-left: 10px;
-        padding-bottom: 20px;
+        padding-bottom: 50px;
         color: $white;
-        background-color: #edbfff;
+        background-color: #7778c6;
         background-size: cover;
+        position: relative;
+        overflow: hidden;
+        @include container-shadow;
+    }
+    
+    &__content-img {
+        max-width: 100%;
+        position: absolute;
+        top: 285px;
+        left: 0px;
+        z-index: 0;
     }
     
     &__header {
         margin-top: 0px;
-        margin-bottom: 40px;
-        padding-top: 60px;
+        margin-bottom: 20px;
+        padding-top: 30px;
+        font-size: 1.8em;
     }
     
     &__text {
         margin-bottom: 50px;
+        z-index: 1;
+        position: relative;
+        font-size: 1.2em;
     }
     
     &__button {
@@ -46,10 +61,10 @@
         flex-grow: 1;
         
         &__inner {
-            max-width: 303px;
             padding-left: 30px;
-            margin-left: 8%;
+            margin-left: 0%;
             margin-right: 0px;
+            max-width: 303px;
         }
     }
 }
