--- a/port/src/scss/var.scss
+++ b/port/src/scss/var.scss
@@ -18,3 +18,7 @@ $font-heading: 'LeagueSpartan-Bold', Tahoma, Geneva, sans-serif;
     margin-left: $margin;
     margin-right: $margin;
 }
+
+@mixin container-shadow {
+    box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.63);
+}
