--- a/sedona/src/scss/style.scss
+++ b/sedona/src/scss/style.scss
@@ -29,7 +29,6 @@ $gray-bg: #f2f2f2;
     width: 88%;
     margin-left: auto;
     margin-right: auto;
-//    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.75);
     box-shadow:  0 0 10px rgba(0,0,0,0.75);
 }
 
@@ -54,6 +53,9 @@ body {
     font-family: $font;
     position: relative;
     padding-bottom: 30px;
+    padding-left: 3%;
+    padding-right: 3%;
+    box-sizing: border-box;
     
     &__header {
         margin-top: 40px;
