port - add menu with transition, change icons to colored versions, fix cards till 1024px, add bounce-animation with mouseOut-bug

--- a/port/src/scss/components/page-footer.scss
+++ b/port/src/scss/components/page-footer.scss
@@ -13,3 +13,10 @@
         width: 60%;
     }
 }
+
+@media(min-width: 1024px) {
+    .stack__text {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
