--- a/port/src/scss/components/main-nav.scss
+++ b/port/src/scss/components/main-nav.scss
@@ -1,6 +1,43 @@
 .main-nav {
-    position: absolute;
-    top: -100px;
+    position: fixed;
+    top: -635px;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    z-index: 2;
+    background-color: $blue;
+    padding-top: 60px;
+    transition: top 1.2s ease-out;
+    
+    &__list {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    
+    &__list-item {
+        display: block;
+        color: white;
+        text-decoration: none;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: bold;
+        background-color: $blue;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        
+        &:hover {
+            background-color: lighten($blue, 10%);
+        }
+    }
+    
+    &__cross {
+        position: absolute;
+        top: 16px;
+        right: 20px;
+        fill: white;
+        cursor: pointer;
+    }
     
 //    make toggler bigger 
     &__toggler {
@@ -41,6 +78,9 @@
     }
 }
 
+.main-nav_opened {
+    top: 0px;
+}
 //@media(min-width: 768px) {
 //    .main-nav__toggler {
 //        top: 54px;
