--- a/port/src/scss/components/nakitel.scss
+++ b/port/src/scss/components/nakitel.scss
@@ -66,7 +66,21 @@
             padding-right: 30px;
             margin-left: 0px;
             margin-right: 0px;
-            max-width: 303px;
+            max-width: 86%;
+        }
+        
+        &__button {
+            margin-top: 23px;
+            margin-bottom: 53px;
+        }
+    }
+}
+
+@media(min-width: 1024px) {
+    .nakitel {
+        
+        &__button {
+            margin-bottom: 74px;
         }
     }
 }
