--- a/sedona/src/scss/components/tourism-essentials.scss
+++ b/sedona/src/scss/components/tourism-essentials.scss
@@ -60,6 +60,7 @@
             h3 {
                 display: block;
                 font-size: 22px;
+                line-height: 26px;
             }
             
             p {
