sedona - fix centralizing in some blocks

--- a/sedona/src/scss/components/tourism-essentials.scss
+++ b/sedona/src/scss/components/tourism-essentials.scss
@@ -51,6 +51,7 @@
         
         &__list {
             display: flex;
+            justify-content: center;
         }
         
         &__list-item {
