--- a/sedona/src/scss/components/tourism-features.scss
+++ b/sedona/src/scss/components/tourism-features.scss
@@ -38,6 +38,7 @@
         &__list {
             display: flex;
             width: 100%;
+            justify-content: center;
         }
         
         &__list-item {
