sedona - fix centralizing

--- a/sedona/src/scss/components/tourism-features.scss
+++ b/sedona/src/scss/components/tourism-features.scss
@@ -38,7 +38,7 @@
         &__list {
             display: flex;
             width: 100%;
-            justify-content: center;
+            justify-content: space-around;
         }
   
         &__list-item {
