sedona - add icons with transperence, add hamb-change onclick and some other fix

--- a/sedona/src/scss/components/main-nav.scss
+++ b/sedona/src/scss/components/main-nav.scss
@@ -41,54 +41,64 @@
         }
     }
     
-    &__cross {
-        position: absolute;
-        top: 16px;
-        right: 20px;
-        fill: white;
-        cursor: pointer;
-    }
-    
     &__hamb {
-    display: block;
-    width: 24px;
-    position: absolute;
-    top: 19px;
-    right: 16px;
-    font-size: 0px;
-    border: none;
-    background-color: white;
-    border-top: 4px solid $main-color;
-    cursor: pointer;
-    outline-color: $main-color;
-    
-    &:before {
-        content: "";
         display: block;
         position: absolute;
-        top: 4px;
-        left: 0;
-        width: 24px;
-        height: 4px;
+        width: 100%;
+        height: 5px;
+        top: 50%;
+        right: 0px;
+        margin-top: -5px;        
         background-color: $main-color;
-    }
-    
-    &:after {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 12px;
-        left: 0;
-        width: 24px;
-        height: 4px;
-        background-color: $main-color;
-    }
-    
-    }
-}
+        outline: none;
 
-.main-nav_opened {
-    top: -230px;
+        font-size: 0px;
+        border: none;
+        cursor: pointer;
+        outline-color: $main-color;
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 10px;
+            width: 100%;
+            left: 0;
+            height: 5px;
+            background-color: $main-color;
+        }
+
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 20px;
+            width: 100%;
+            left: 0;
+            height: 5px;
+            background-color: $main-color;
+        }
+
+        &:after, 
+        &:before, 
+        & {
+          transition: all .3s ease-in-out;
+        } 
+        
+        &_nav-opened {
+            background-color: white;
+            
+            &:after {
+                transform: rotate(-45deg);
+                top: 10px;  
+            }
+            
+            &:before {
+                transform: rotate(45deg);
+            }
+        }
+    }
+    
 }
 
 @media(min-width: 768px) {
