--- a/builder/src/scss/style.scss
+++ b/builder/src/scss/style.scss
@@ -19,3 +19,32 @@ main {
 @import 'components/welcome-screen.scss';
 
 @import 'components/features.scss';
+
+@import 'components/services.scss';
+
+.text-container {
+    background-color: $gray-bg;
+}
+
+@import 'components/news.scss';
+
+@import 'components/shop.scss';
+
+.parthners {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    @include top-bottom-gutter;
+
+    
+    &__logo {
+        width: 110px;
+        height: 60px;
+        margin: 10px;
+        background-color: $blue;
+    }
+}
+
+@import 'components/page-footer.scss';
