--- a/builder/src/scss/components/welcome-screen.scss
+++ b/builder/src/scss/components/welcome-screen.scss
@@ -20,3 +20,14 @@
         }
     }
 }
+
+
+@media(min-width: 768px) {
+    .welcome-screen {
+        height: 470px;
+        
+        &__header {
+            padding-top: 300px;
+        }
+    }
+}
