--- a/builder/src/scss/fonts.scss
+++ b/builder/src/scss/fonts.scss
@@ -9,5 +9,5 @@
   font-family: 'Ubuntu Condensed';
   font-style: normal;
   font-weight: 400;
-  src: local('Ubuntu Condensed'), url(../../fonts/UbuntuCondensed-Regular.ttf2);
+  src: local('Ubuntu Condensed'), url(../../fonts/UbuntuCondensed-Regular.ttf);
 }
